# cjm-fasthtml-jsonschema

./: .gitignore  demo_app.py  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_fasthtml_jsonschema/: _modidx.py
cjm_fasthtml_jsonschema/components/: fields.py
cjm_fasthtml_jsonschema/core/: dataclass.py  parser.py  types.py
cjm_fasthtml_jsonschema/generators/: form.py
claude-docs/: FASTHTML_CSS_UTILITIES_GUIDE.md
components/: fields.html  fields.html.md
core/: dataclass.html  dataclass.html.md  parser.html  parser.html.md  types.html  types.html.md
generators/: form.html  form.html.md
nbs/: index.ipynb  nbdev.yml
nbs/components/: fields.ipynb
nbs/core/: dataclass.ipynb  parser.ipynb  types.ipynb
nbs/generators/: form.ipynb
test_files/: image_processor_config_schema.json  voxtral_config_schema.json
